some tests have been started

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
     "include": [
     
     "./src/**/*.ts"
-    
-    ],
+, "src/Services/EmailValidator.js"    
+, "src/Services/IsStringValidator.js"    ],
     
     "compilerOptions": {
     
