created UserController with check / add user, 500 unexpted error

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "project template repo",
   "main": "main.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "nodemon --ext ts --exec ts-node main.ts"
   },
   "repository": {
     "type": "git",
